# manga-reader

./: .coveragerc  .gitignore  Makefile  README.md  manga  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: run-tests.yml
mangareader/: _version.py
mangareader/reader/: renderer.py
mangareader/sources/: mangareader.py  source.py
reader/: __main__.py
reader/exceptions/: __init__.py
reader/manga/: __init__.py  manga.py
reader/search/: __init__.py  search_engine.py
reader/sources/: __init__.py  mangareader.py  source.py
reader/test/: common.py  conftest.py  test_downloader.py  test_mangareader_source.py  test_search_engine.py
reader/test/data/mangareader/: first_page.html  list.html  nth_page.html  overview.html
reader/utils/: __init__.py  common.py  downloader.py
src/mangareader/manga/: manga.py
src/mangareader/sources/: __init__.py
tests/: conftest.py  test_downloader.py  test_mangareader_source.py  test_search_engine.py
tests/data/mangareader/: overview.html
