[metadata]
name = mangareader
author = Duncan Sommerville
author_email = duncan.sommerville@gmail.com
description = Command line interface for searching, downloading, and reading manga
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
  requests >= 2.26.0
  click >= 7.1.1
  Whoosh >= 2.7.4
  beautifulsoup4 >= 4.9.0

[options.packages.find]
exclude=tests
